--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-vfs2</artifactId>
 			<version>2.0</version>
@@ -36,8 +42,12 @@
 			<version>0.1.54</version>
 		</dependency>
 
-
-
+		<dependency>
+			<groupId>commons-net</groupId>
+			<artifactId>commons-net</artifactId>
+			<classifier>ftp</classifier>
+			<version>2.0</version>
+		</dependency>
 
 
 		<!-- Test dependencies -->
